--- a/ecom-backend/src/main/resources/application.yml
+++ b/ecom-backend/src/main/resources/application.yml
@@ -5,6 +5,8 @@ logging:
     filipe.filipe.devs: INFO
 
 spring:
+  config:
+    import: file:.env[.properties]
   application:
     name: Ecommerce Backend
   threads:
@@ -50,8 +52,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: https://codecake.kinde.com
-          jwk-set-uri: https://codecake.kinde.com/.well-known/jwks
+          issuer-uri: https://filipedevs.kinde.com
+          jwk-set-uri: https://filipedevs.kinde.com/.well-known/jwks
           audiences: http://localhost:8080/api
   devtools:
     restart:
@@ -77,10 +79,10 @@ application:
     allow-credentials: false
     max-age: 300
   kinde:
-    api: https://codecake.kinde.com
+    api: https://filipedevs.kinde.com
     client-id: ${KINDE_CLIENT_ID}
     client-secret: ${KINDE_CLIENT_SECRET}
-    audience: https://codecake.kinde.com/api
-  stripe:
-    api-key: ${STRIPE_API_KEY}
-    webhook-secret: ${STRIPE_WEBHOOK_SECRET}
+    audience: https://filipedevs.kinde.com/api
+#  stripe:
+#    api-key: ${STRIPE_API_KEY}
+#    webhook-secret: ${STRIPE_WEBHOOK_SECRET}
