--- a/ecom-frontend/package.json
+++ b/ecom-frontend/package.json
@@ -25,7 +25,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@tanstack/angular-query-devtools-experimental": "^5.62.8",
+    "@tanstack/angular-query-experimental": "^5.62.8",
+    "angular-auth-oidc-client": "^19.0.0",
     "express": "^4.18.2",
+    "ngxtension": "^4.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
