--- a/ecom-frontend/package.json
+++ b/ecom-frontend/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@ng-web-apis/common": "^4.11.1",
+    "@ng-web-apis/universal": "^4.11.1",
     "@tanstack/angular-query-devtools-experimental": "^5.62.8",
     "@tanstack/angular-query-experimental": "^5.62.8",
     "angular-auth-oidc-client": "^19.0.0",
@@ -41,7 +43,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^22.10.2",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.22",
     "jasmine-core": "~5.4.0",
