--- a/ecom-frontend/package.json
+++ b/ecom-frontend/package.json
@@ -31,6 +31,7 @@
     "@tanstack/angular-query-experimental": "^5.62.8",
     "angular-auth-oidc-client": "^19.0.0",
     "express": "^4.18.2",
+    "ngx-stripe": "^19.0.0",
     "ngxtension": "^4.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
